--- a/css/styleBig.css
+++ b/css/styleBig.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 .hero {
     width: inherit;
     position: inherit;
@@ -87,11 +89,6 @@
     width: 0;
 }
 
-.footer {
-    display: inherit;
-    flex-wrap: inherit;
-}
-
 .marker {
     height: 20%;
     width: 100%;
@@ -112,29 +109,48 @@
 .yellow {
     background-color: yellow;
 }
-
-video {
-    position: fixed;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    background: url('//demosthenes.info/assets/images/polina.jpg') no-repeat;
-    background-size: cover;
-    transition: 1s opacity;
+.rodape{
+    width: 50%;
+    display: inline-block;
+    margin-top: 2em;
+    padding-left: 2em;
+}
+#map{
+    opacity: 0.6;
+}
+#map:hover{
+    opacity: 1;
 }
 
 #contato {
     color: white;
     font-size: 1.2rem;
     font-weight: 100;
-    padding: 2rem;
-    margin: 2rem;
 }
 
-#contato div {
-    width: 50%;
-    float: right;
+.footer{
+    height: 100vh;
+    background-color: transparent;
+}
+
+.footer:after{
+    background: url("../images/kiss_waterfall_HD-compressed.jpg") bottom center /cover no-repeat;
+    content: "";
+    /*opacity: 0.4;*/
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+}
+#confirmacao{
+    display: block;
+    margin-bottom: 1rem;
+}
+#confirmacao:before{
+    content: 'Confirme sua presença antes de 10/07';
+}
+.confirme{
+    display: none;
 }
