--- a/css/style.css
+++ b/css/style.css
@@ -445,6 +445,13 @@ main {
     .presentes {
         /*display: none;*/
     }
+    .cerimonia__descricao {
+        font-size: 16px;
+    }
+
+    #contato{
+        width: 100%;
+    }
 }
 
 @media screen and (min-width: 620px) and (max-width: 696px) {
