--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,11 @@ main {
     height: 100%;
 }
 
+#confirmacao {
+    text-align: center;
+    font-size: 130%;
+}
+
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
     .ig-b-48 {
         background-image: url(//badges.instagram.com/static/images/ig-badge-sprite-48@2x.png);
@@ -445,11 +450,12 @@ main {
     .presentes {
         /*display: none;*/
     }
+
     .cerimonia__descricao {
         font-size: 16px;
     }
 
-    #contato{
+    #contato {
         width: 100%;
     }
 }
