nova imagem do rodape

--- a/css/styleBig.css
+++ b/css/styleBig.css
@@ -134,7 +134,7 @@
 }
 
 .footer:after{
-    background: url("../images/kiss_waterfall_HD-compressed.jpg") bottom center /cover no-repeat;
+    background: url("../images/rosario.jpg") bottom center /cover no-repeat;
     content: "";
     /*opacity: 0.4;*/
     top: 0;
