--- a/css/style.css
+++ b/css/style.css
@@ -43,16 +43,23 @@ main {
  * content
  *
  */
-
+.full__height{
+    height: 100%;
+}
 .hero {
     width: 100%;
     position: relative;
     background: url("../images/kiss_waterfall.jpg") bottom center /cover no-repeat;
-    height: 530px;
+    min-height: 530px;
+    height: 100%;
 }
 
 .getting__marriage {
     display: none;
+}
+
+#countdown{
+    margin-top: 0;
 }
 
 .caption {
@@ -432,6 +439,92 @@ main {
     .casamento div, .presente {
         width: 33%;
     }
+    .footer a{
+        color: #fff;
+    }
+    #confirmacao {
+        text-align: center;
+        font-size: 130%;
+        background-color: #C02942;
+        border-radius: 6px;
+        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12);
+        width: 80%;
+        margin: 0 auto;
+
+        /*transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;*/
+    }
+    /**Effect button*/
+
+    .btn {
+        position: relative;
+
+        display: block;
+        margin: 30px auto;
+        padding: 0;
+
+        overflow: hidden;
+
+        border-width: 0;
+        outline: none;
+        border-radius: 2px;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+
+        background-color: #C02942;
+        color: #ecf0f1;
+
+        transition: background-color .3s;
+    }
+
+    .btn:hover, .btn:focus {
+        background-color: #27ae60;
+    }
+
+    .btn > * {
+        position: relative;
+    }
+
+    .btn span {
+        display: block;
+        padding: 2px 10px;
+    }
+
+    .btn:before {
+        content: "";
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        display: block;
+        width: 0;
+        padding-top: 0;
+
+        border-radius: 100%;
+
+        background-color: rgba(236, 240, 241, .3);
+
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+
+    .btn:active:before {
+        width: 120%;
+        padding-top: 120%;
+
+        transition: width .2s ease-out, padding-top .2s ease-out;
+    }
+
+    .btn.red {
+        background-color: #C02942;
+    }
+
+    .btn.red:hover, .btn.red:focus {
+        background-color: #c0392b;
+    }
+    /**************************************/
 }
 
 @media screen and (max-width: 800px) {
