--- a/css/style.css
+++ b/css/style.css
@@ -440,91 +440,94 @@ main {
         width: 33%;
     }
     .footer a{
-        color: #fff;
-    }
-    #confirmacao {
-        text-align: center;
-        font-size: 130%;
-        background-color: #C02942;
-        border-radius: 6px;
-        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12);
-        width: 80%;
-        margin: 0 auto;
-
-        /*transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;*/
-    }
-    /**Effect button*/
-
-    .btn {
-        position: relative;
-
-        display: block;
-        margin: 30px auto;
-        padding: 0;
-
-        overflow: hidden;
-
-        border-width: 0;
-        outline: none;
-        border-radius: 2px;
-        box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
-
-        background-color: #C02942;
-        color: #ecf0f1;
-
-        transition: background-color .3s;
+        color: #000;
     }
 
-    .btn:hover, .btn:focus {
-        background-color: #27ae60;
-    }
+}
+@media screen and (min-width: 800px) {
+#confirmacao {
+    text-align: center;
+    font-size: 130%;
+    background-color: #C02942;
+    border-radius: 6px;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12);
+    width: 80%;
+    margin: 0 auto;
 
-    .btn > * {
-        position: relative;
-    }
+    /*transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;*/
+}
+/**Effect button*/
 
-    .btn span {
-        display: block;
-        padding: 2px 10px;
-    }
+.btn {
+    position: relative;
 
-    .btn:before {
-        content: "";
+    display: block;
+    margin: 30px auto;
+    padding: 0;
 
-        position: absolute;
-        top: 50%;
-        left: 50%;
+    overflow: hidden;
 
-        display: block;
-        width: 0;
-        padding-top: 0;
+    border-width: 0;
+    outline: none;
+    border-radius: 2px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
 
-        border-radius: 100%;
+    background-color: #C02942;
+    color: #ecf0f1;
 
-        background-color: rgba(236, 240, 241, .3);
+    transition: background-color .3s;
+}
 
-        -webkit-transform: translate(-50%, -50%);
-        -moz-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        -o-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-    }
+.btn:hover, .btn:focus {
+    background-color: #27ae60;
+}
 
-    .btn:active:before {
-        width: 120%;
-        padding-top: 120%;
+.btn > * {
+    position: relative;
+}
 
-        transition: width .2s ease-out, padding-top .2s ease-out;
-    }
+.btn span {
+    display: block;
+    padding: 2px 10px;
+}
 
-    .btn.red {
-        background-color: #C02942;
-    }
+.btn:before {
+    content: "";
 
-    .btn.red:hover, .btn.red:focus {
-        background-color: #c0392b;
-    }
-    /**************************************/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    display: block;
+    width: 0;
+    padding-top: 0;
+
+    border-radius: 100%;
+
+    background-color: rgba(236, 240, 241, .3);
+
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.btn:active:before {
+    width: 120%;
+    padding-top: 120%;
+
+    transition: width .2s ease-out, padding-top .2s ease-out;
+}
+
+.btn.red {
+    background-color: #C02942;
+}
+
+.btn.red:hover, .btn.red:focus {
+    background-color: #c0392b;
+}
+/**************************************/
 }
 
 @media screen and (max-width: 800px) {
