americanas no lugar da magazine luiza

--- a/css/style.css
+++ b/css/style.css
@@ -352,8 +352,11 @@ main {
 .mgluiza {
     background: url('../images/mgluiza.jpg') no-repeat 50% center;
 }
+.americanas {
+    background: url('../images/americanas.png') no-repeat 50% center;
+}
 
-/* Flexible iFrame */
+    /* Flexible iFrame */
 
 .Flexible-container {
     position: relative;
